# calmpage-native

./: .gitignore  README.md
App/: Package.swift
App/Packaging/: AppIcon.icns  Info.plist
App/Sources/CalmPageNative/: AppModel.swift  AppPaths.swift  AppStateStore.swift  CalmPageNativeApp.swift  LibraryStore.swift  MarkdownScanner.swift  Models.swift  ReadmdLocator.swift  ReadmdRenderer.swift
App/Tests/CalmPageNativeTests/: CalmPageNativeTests.swift
core/: Cargo.toml
core/src/: cache.rs  index.rs  lib.rs  render.rs  scanner.rs  workspace.rs
core/tests/: core_flow.rs
core/tests/fixtures/vault/: README.md  draft.markdown  ignore.txt
core/tests/fixtures/vault/subdir/: page.mdx
docs/: apple-native-ui-design-spec.md  calm-page-feature-inventory.md  lightweight-architecture-options.md  native-implementation-plan.md  native-implementation-spec.md  native-optimization-implementation-spec.md  native-product-spec.md  native-rewrite-spike-plan.md  native-technical-spec.md
measurements/: 2026-06-22-task-6-regression-gates.md  README.md
scripts/: build-macos-app.sh
tmp/design-mockups/: toc-options.html
