[package]
name = "calmpage-core"
version = "0.1.0"
edition = "2024"

[dependencies]
readmd = { git = "https://github.com/peeomid/readmd.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
pulldown-cmark = { version = "0.13", default-features = false }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
